# flake8-class-attributes-order

./: .flake8  .gitignore  Makefile  README.md  pyproject.toml  setup.py
flake8_class_attributes_order/: checker.py  model_parts_info.py  node_type_weights.py  ordering_errors.py
flake8_class_attributes_order/tests/: conftest.py  test_class_attributes_order.py
flake8_class_attributes_order/tests/test_files/: configurable.py
tests/test_files/: private_custom_order_ok.py  private_strict_ok.py  strict_ok.py
