[tool.poetry]
name = "class-attribute-order"
version = "0.1.4"
description = "A flake8 extension that checks classes attributes order"
authors = [
    "Ilya Lebedev <melevir@gmail.com>",
    "C-Change Labs <support@c-change-labs.com>"
]
maintainers = ["C-Change Labs <open-source@c-change-labs.com>"]
classifiers=[
    'Environment :: Console',
    'Framework :: Flake8',
    'Operating System :: OS Independent',
    'Topic :: Software Development :: Documentation',
    'Topic :: Software Development :: Libraries :: Python Modules',
    'Topic :: Software Development :: Quality Assurance',
    'Programming Language :: Python',
    'Programming Language :: Python :: 3.7',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
]
license = "MIT"
readme = "README.md"
keywords = ["flake8"]
repository = "https://github.com/cchangelabs/flake8-class-attributes-order"

[tool.poetry.plugins."flake8.extension"]
"CCE" = "flake8_class_attributes_order.checker:ClassAttributesOrderChecker"

[[tool.poetry.packages]]
include = "flake8_class_attributes_order"

[tool.poetry.dependencies]
python = ">=3.8.1,<3.13.0"
flake8 = "^6.1.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-cov = "^4.1.0"
pydocstyle = "^6.3.0"
flake8 = "^6.1.0"
flake8-2020 = "^1.8.1"
flake8-blind-except = "^0.2.1"
flake8-bugbear = "^23.11.26"
flake8-builtins = "^2.2.0"
flake8-comprehensions = "^3.14.0"
flake8-debugger = "^4.1.2"
flake8-docstrings = "^1.7.0"
flake8-polyfill = "^1.0.2"
flake8-print = "^5.0.0"
flake8-quotes = "^3.3.2"
flake8-string-format = "^0.3.0"
flake8-todo = "^0.7"
mypy = "^1.7.1"
safety = "^2.3.5"
flake8-eradicate = "^1.5.0"
flake8-fixme = "^1.1.1"
flake8-annotations-complexity = "^0.0.8"
flake8-variables-names = "^0.0.6"
flake8-class-attributes-order = {url = "https://github.com/cchangelabs/flake8-class-attributes-order/releases/download/0.1.4/flake8_class_attributes_order-0.1.4-py3-none-any.whl"}
flake8-broken-line = "^1.0.0"
flake8-tidy-imports = "^4.10.0"
flake8-typing-imports = "^1.15.0"
dlint = "^0.14.1"
flake8-if-statements = "^1.0.0"
flake8-functions = "^0.0.8"
flake8-annotations-coverage = "^0.0.6"
flake8-expression-complexity = "^0.0.11"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
ignore_missing_imports = true
warn_no_return = true
exclude = "(build|env|venv.*|migrations|tests)"
