[tool.poetry]
name = "class-attribute-order"
version = "0.2.0"
description = "A flake8 extension that checks classes attributes order"
authors = [
    "Ilya Lebedev <melevir@gmail.com>",
    "C-Change Labs <support@c-change-labs.com>"
]
maintainers = ["C-Change Labs <open-source@c-change-labs.com>"]
classifiers=[
    'Environment :: Console',
    'Framework :: Flake8',
    'Operating System :: OS Independent',
    'Topic :: Software Development :: Documentation',
    'Topic :: Software Development :: Libraries :: Python Modules',
    'Topic :: Software Development :: Quality Assurance',
    'Programming Language :: Python',
    'Programming Language :: Python :: 3.7',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
]
license = "MIT"
readme = "README.md"
keywords = ["flake8"]
repository = "https://github.com/cchangelabs/flake8-class-attributes-order"

[tool.poetry.plugins."flake8.extension"]
"CCE" = "flake8_class_attributes_order.checker:ClassAttributesOrderChecker"

[[tool.poetry.packages]]
include = "flake8_class_attributes_order"

[tool.poetry.dependencies]
python = ">=3.8.1,<3.13.0"
flake8 = "^6.1.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-cov = "^4.1.0"
pydocstyle = "^6.3.0"
flake8 = "^6.1.0"
flake8-bugbear = "^23.11.26"
mypy = "^1.7.1"
safety = "^2.3.5"
flake8-eradicate = "^1.5.0"

flake8-tidy-imports = "^4.10.0"
flake8-typing-imports = "^1.15.0"
dlint = "^0.14.1"
flake8-expression-complexity = "^0.0.11"
pymarkdownlnt = "^0.9.14"
black = "^23.12.0"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
ignore_missing_imports = true
warn_no_return = true
exclude = "(build|env|venv.*|migrations|tests)"

[tool.isort]
profile = "black"
line_length = 120
force_sort_within_sections = "true"
atomic = "true"

[tool.black]
line-length = 120
target-version = ['py311']
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.mypy_cache
    | \.tox
    | \.venv
    | test_files
    | _build
    | buck-out
    | build
    | dist
  )/
)
'''
